--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'application'
+apply plugin: 'com.jfrog.artifactory'
 mainClassName = "urlshortener.app.URLShortenerApplication"
 
 group = 'urlshortener'
